fixed spacing and aligment for time element

--- a/Main_Folder/MY_PROJECTS/timer/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/timer/src/App.scss
@@ -194,7 +194,7 @@
 
   #timer-label {
     align-self: flex-start;
-    margin-left: 14%;
+    margin-left: 20.5%;
 
     margin-bottom: -2%;
 
